--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,6 +1,6 @@
 <div class="admin-title">
   <h2>Posts</h2>
-  <a href="/add-post" class="button">+ Add New</a>
+  <a href="/admin/post/create" class="button">+ Add New</a>
 </div>
 
 <ul class="admin-posts">
@@ -12,7 +12,7 @@
         <%= post.title %> &nearr;
       </a>
       <div class="admin-post-controls">
-        <a href="/edit-post/<%= post._id %>" class="btn">Edit</a>
+        <a href="/admin/post/<%= post._id %>/edit" class="btn">Edit</a>
 
         <form action="/delete-post/<%= post._id %>?_method=DELETE" method="POST">
           <input type="submit" value="Delete" class="btn-delete btn">
